@@ -1,4 +1,10 @@
-  Colin Watson  <cjwatson@debian.org>
+Tue Sep  4 02:09:07 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (format_display): Actually change to the temporary
+	  directory for HTML output.
+	* src/mandb.c (main): --create implies --no-purge.
+
+Sat Sep  1 17:40:06 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* lib/mkdtemp.c, lib/mkstemp.c, lib/tempname.c: New files, taken
 	  from glibc 2.2.4.
